--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Renewing The Minds</title>
+    <title>Renewing Of The Mind Pllc</title>
   </head>
   <body>
     <div id="root"></div>
